# tde-nrf52

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
sdk/: CMakeLists.txt
sdk/ble/: CMakeLists.txt
sdk/ble/ble_advertising/: CMakeLists.txt  ble_advertising.c
sdk/ble/ble_common/: CMakeLists.txt  ble_date_time.h  ble_sensor_location.h
sdk/ble/ble_db_discovery/: CMakeLists.txt
sdk/ble/ble_services/: CMakeLists.txt
sdk/ble/ble_services/ble_dis/: CMakeLists.txt
sdk/ble/nrf_ble_gatt/: CMakeLists.txt
sdk/cmsis/include/: cmsis_gcc.h
sdk/config/nrf52832/config/: app_config.h  sdk_config.h
sdk/config/nrf52840/config/: app_config.h  sdk_config.h
sdk/drivers/: CMakeLists.txt
sdk/drivers/usbd/: CMakeLists.txt
sdk/integration/: CMakeLists.txt
sdk/integration/nrfx/: CMakeLists.txt  nrf_log.h  nrf_log_ctrl.h  nrf_log_instance.h  nrf_warn_enter.h  nrf_warn_leave.h
sdk/integration/nrfx/legacy/: CMakeLists.txt  nrf_drv_power.c
sdk/libraries/: CMakeLists.txt
sdk/libraries/app_scheduler/: CMakeLists.txt  app_scheduler.c  app_scheduler.h
sdk/libraries/app_timer/: CMakeLists.txt  app_timer.c
sdk/libraries/app_usbd/: app_usbd.c  app_usbd_class_base.h
sdk/libraries/app_usbd/class/nrf_dfu_trigger/: app_usbd_nrf_dfu_trigger_internal.h
sdk/libraries/atomic/: CMakeLists.txt
sdk/libraries/atomic_fifo/: CMakeLists.txt
sdk/libraries/atomic_flags/: CMakeLists.txt
sdk/libraries/hardfault/: CMakeLists.txt
sdk/libraries/section_vars/: CMakeLists.txt
sdk/libraries/strerror/: CMakeLists.txt
sdk/libraries/usbd/: CMakeLists.txt  app_usbd_class_base.h
sdk/libraries/utf/: CMakeLists.txt
sdk/libraries/util/: CMakeLists.txt  app_error_handler_gcc.c
sdk/nrfx/: CMakeLists.txt
sdk/nrfx/drivers/: CMakeLists.txt
sdk/nrfx/drivers/src/: nrfx_saadc.c
sdk/nrfx/mdk/: CMakeLists.txt  compiler_abstraction.h  nrf_common.ld
sdk/nrfx/templates/nRF52832/: nrfx_config.h
sdk/nrfx/templates/nRF52840/: nrfx_config.h
sdk/softdevice/: CMakeLists.txt
sdk/softdevice/mbr/nrf52832/include/: nrf_mbr.h
sdk/softdevice/mbr/nrf52840/include/: nrf_mbr.h
sdk/softdevice/nosd/: CMakeLists.txt
sdk/softdevice/s132/include/: ble_gap.h  nrf_sdm.h  nrf_soc.h
sdk/softdevice/s140/include/: ble.h  ble_gap.h  nrf_sdm.h  nrf_soc.h  nrf_svc.h
sdk/softdevice/sdh/: CMakeLists.txt
